<resources>
    <string name="app_name">Plask</string>

    <!--Beach related info-->
    <string name="wind">Vind: %s </string>
    <string name="jetty">Brygge</string>
    <string name="diving_board">Stupebrett</string>
    <string name="kiosk">Kiosk</string>
    <string name="toilet">Toalett</string>

    <!--Image descriptions-->
    <string name="no_beach_desc">Denne stranden er ubeskrivelig!</string>
    <string name="location_button_desc">Knapp som sentrerer kartet på bruker sin posisjon</string>
    <string name="zoom_in_desc">Zoom inn knapp</string>
    <string name="zoom_out_desc">Zoom ut knapp</string>
    <string name="logo_desc">Logo</string>
    <string name="search_beach_name">Knapp for å søke på badeplasser</string>
    <string name="weather_icon_desc">Symbol for vær</string>
    <string name="water_icon_desc">Symbol for vann</string>
    <string name="wind_icon_desc">Symbol for vind</string>
    <string name="back_desc">Tilbake knapp</string>
    <string name="beach_pic_desc">Bilde av strand</string>
    <string name="MET_logo_desc">Logo til Meteorologisk institutt</string>
    <string name="favorite_indicator">Knapp for å sette strand som favoritt</string>

    <!--Units-->
    <string name="kilometer">%s km</string>
    <string name="celsius">%s \u2103</string>
    <string name="meters_per_second">%s m/s</string>

    <!--HomeFragment-->
    <string name="favorites">Favoritter</string>
    <string name="nearest_beaches">Nærmeste badeplasser</string>
    <string name="no_favorites">Her vises favoritter</string>
    <string name="see_all">Se alle</string>
    <string name="open_google_maps">Åpne i google maps</string>

    <!--BeachFragment-->
    <string name="my_favorites">Mine favoritter</string>
    <string name="all_beaches">Alle badeplasser</string>
    <string name="sort_by">Sorter etter:</string>


    <string name="location_off">Lokasjon skrudd av</string>
    <string name="MET_credits">Værdata er hentet fra Meteorologisk institutt</string>
    <string name="no_facilities">Ingen fasiliteter</string>

    <string-array name="choose_city">
        <item>Oslo</item>
        <item>Bergen</item>
    </string-array>

    <string-array name="beach_sorting">
        <item>Avstand</item>
        <item>Lufttemperatur</item>
        <item>Vanntemperatur</item>
    </string-array>

</resources>
