<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard_grey"
    android:fitsSystemWindows="true"
    tools:context=".ui.BeachFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/beach_topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/beach_back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/back_desc"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <SearchView
            android:id="@+id/beach_search_bar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:hint="@string/search_beach_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:id="@+id/all_beaches_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0.6"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/all_beaches"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/mid_guideline"
        app:layout_constraintTop_toBottomOf="@+id/beach_topbar" />

    <!--Mine Favoritter-->

    <TextView
        android:id="@+id/favorite_beaches_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0.6"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/my_favorites"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/mid_guideline"
        app:layout_constraintTop_toBottomOf="@+id/beach_topbar" />

    <TextView
        android:id="@+id/sort_by_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sort_by"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/all_beaches_btn" />

    <Spinner
        android:id="@+id/sort_by_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_background"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:elevation="4dp"
        android:entries="@array/beach_sorting"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:popupBackground="@color/standard_green"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/sort_by_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/beach_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_sp" />


</androidx.constraintlayout.widget.ConstraintLayout>
